--- a/style.css
+++ b/style.css
@@ -114,28 +114,28 @@ font-size: 1.8;
 }
 .lab1
 {
-    background-image: url("images/color1.jpg");
+    background-image: url("color1.jpg");
    
 }
 .lab2
 {
-    background-image: url("images/color2.jpg");
+    background-image: url("color2.jpg");
 }
 .lab3
 {
-    background-image: url("images/color3.jpg");
+    background-image: url("color3.jpg");
 }
 .lab4
 {
-    background-image: url("images/color4.jpg");
+    background-image: url("color4.jpg");
 }
 .lab5
 {
-    background-image: url("images/color5.jpg");
+    background-image: url("color5.jpg");
 }
 .lab6
 {
-    background-image: url("images/color6.jpg");
+    background-image: url("color6.jpg");
 }
 
 input[type="radio"]
@@ -255,33 +255,33 @@ transition: all .5s linear;
 
 }
 .img1{
-    background-image: url("images/chair1.png");
+    background-image: url("chair1.png");
     
   opacity: 0;
 }
 .img2
 {
-    background-image: url("images/chair2.png");
+    background-image: url("chair2.png");
    opacity: 0;
 }
 .img3
 {
-    background-image: url("images/chair3.png");
+    background-image: url("chair3.png");
    opacity: 0;
 }
 .img4
 {
-    background-image: url("images/chair4.png");
+    background-image: url("chair4.png");
    opacity: 0;
 }
 .img5
 {
-    background-image: url("images/chair5.png");
+    background-image: url("chair5.png");
    opacity: 0;
 }
 .img6
 {
-    background-image: url("images/chair6.png");
+    background-image: url("chair6.png");
     opacity: 0;
 }
 
